# BreezeChat

./: .gitignore  CMakeLists.txt  LICENSE  test.cpp
server/asr/: main.py  requirements.txt
server/example/brpc/: client.cpp  server.cpp
server/example/es/: main.cpp
server/example/etcd/: discovery.cpp  get.cpp  main.proto  put.cpp  registry.cpp
server/example/gflags/: main.cpp
server/example/gtest/: main.cpp
server/example/rabbitmq/: consumer.cpp  publish.cpp
server/example/redis/: main.cpp
server/example/spdlog/: main.cpp
server/llm/: config.yaml  llm.py  main.py
server/odb/: chat_session_member.hxx  message.hxx  odb_boost_date_time_exceptions.cxx  user.hxx
server/proto/: base.proto  file.proto  friend.proto  gateway.proto  message.proto  notify.proto  speech.proto  transmite.proto  user.proto
server/src/common/: asr.hpp  channel.hpp  data_es.hpp  data_mysql.hpp  data_redis.hpp  email.hpp  es.hpp  etcd.hpp  llm.hpp  logger.hpp  rabbitmq.hpp  utils.hpp
server/src/file/: CMakeLists.txt
server/src/file/src/: file_server.cpp  file_server.hpp
server/src/file/test/: file_client.cpp
server/src/message/: CMakeLists.txt
server/src/message/src/: message_server.cpp  message_server.hpp
server/src/message/test/: message_client.cpp
server/src/message/test/es_test/: test.cpp
server/src/message/test/mysql_test/: test.cpp
server/src/speech/: CMakeLists.txt
server/src/speech/src/: speech_server.cpp  speech_server.hpp
server/src/speech/test/: speech_client.cpp
server/src/transmit/: CMakeLists.txt
server/src/transmit/src/: transmit_server.cpp  transmit_server.hpp
server/src/transmit/test/: transmit_client.cpp
server/src/transmit/test/mysql_test/: test.cpp
server/src/user/: CMakeLists.txt
server/src/user/src/: user_server.cpp  user_server.hpp
server/src/user/test/: user_client.cpp
server/src/user/test/es_test/: test.cpp
server/src/user/test/mysql_test/: test.cpp
server/src/user/test/redis_test/: test.cpp
